deployment/clouddeploy/gke-workers/base/monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      serviceAccountName: grafana-sa
      containers:
      - name: grafana
        image: grafana/grafana:10.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: datasources-provisioning
          mountPath: /etc/grafana/provisioning/datasources
          readOnly: true
        - name: dashboards-provisioning
          mountPath: /etc/grafana/provisioning/dashboards
          readOnly: true
        - name: dashboards-storage
          mountPath: /etc/grafana/dashboards
          readOnly: true
      - name: gmp-frontend-proxy
        image: gke.gcr.io/prometheus-engine/frontend:v0.12.0-gke.0
        args:
        - "--web.listen-address=0.0.0.0:9090"
        - "--project-id=oss-vdb"
        ports:
        - name: promql
          containerPort: 9090
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
      volumes:
      - name: grafana-storage
        emptyDir: {}
      - name: datasources-provisioning
        configMap:
          name: grafana-datasources
      - name: dashboards-provisioning
        configMap:
          name: grafana-dashboards-provisioning
      - name: dashboards-storage
        configMap:
          name: grafana-dashboards
          optional: true
