deployment/clouddeploy/gke-workers/base/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
